# jonnyzzz-loto

./: .gitignore  README.md  loto.py  pyproject.toml  setup_qwen_mac.sh
voices/: README.md
