[project]
name = "jonnyzzz-loto"
version = "0.2.0"
description = "Russian Loto number announcer with celebrity voice cloning via Qwen3-TTS"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "qwen-tts>=0.1.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "requests>=2.28.0",
]

[project.scripts]
loto = "loto:main"
